Bug 122905 - libllvmForJSC shouldn't call exit(1) on report_fatal_error()
Summary: libllvmForJSC shouldn't call exit(1) on report_fatal_error()
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords: InRadar
Depends on:
Blocks: 112840
  Show dependency treegraph
 
Reported: 2013-10-16 10:14 PDT by Filip Pizlo
Modified: 2013-10-16 20:46 PDT (History)
10 users (show)

See Also:


Attachments
llvm patch (1.96 KB, patch)
2013-10-16 10:18 PDT, Filip Pizlo
no flags Details | Formatted Diff | Diff
the patch (2.30 KB, patch)
2013-10-16 10:20 PDT, Filip Pizlo
msaboff: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Pizlo 2013-10-16 10:14:47 PDT
Patch forthcoming.

<rdar://problem/15237856>
Comment 1 Filip Pizlo 2013-10-16 10:18:37 PDT
Created attachment 214368 [details]
llvm patch
Comment 2 Filip Pizlo 2013-10-16 10:20:18 PDT
Created attachment 214369 [details]
the patch
Comment 3 Filip Pizlo 2013-10-16 20:46:25 PDT
Landed in http://trac.webkit.org/changeset/157558