libllvmForJSC shouldn't call exit(1) on report_fatal_error() https://bugs.webkit.org/show_bug.cgi?id=122905 <rdar://problem/15237856>

Source/JavaScriptCore:

Reviewed by Michael Saboff.

Expose the new LLVMInstallFatalErrorHandler() API through the soft linking magic and
then always call it to install something that calls CRASH().

* llvm/InitializeLLVM.cpp:
(JSC::llvmCrash):
(JSC::initializeLLVMOnce):
(JSC::initializeLLVM):
* llvm/LLVMAPIFunctions.h:

WebKitLibraries:

Reviewed by Michael Saboff.

* LLVMIncludesMountainLion.tar.bz2:
* LLVMLibrariesMountainLion.tar.bz2:



Canonical link: https://commits.webkit.org/141020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157558 268f45cc-cd09-0410-ab3c-d52691b4dbfc